# Blob

./: static_glfw_linux.py  static_kazmath_linux.py
projects/: 01.c  0_sample_vga_graphics.asm  1002_other.cpp  1002_r.cpp  1005_other.cpp  1005_overkill.cpp  1028.c  1028_2.c  1028_ru.cpp  1051.cpp  1052.cpp  1143.c  1171-old.cpp  1171.cpp  1259.cpp  13h.asm  13h_2.asm  64.c  Base64.hpp  CIPO.c  Copy.java  GLUTMenus.c  HashedString.cpp  MSG.c  SDLVLC.cpp  SimpleOGG.cpp  WebServer.java  X.cpp  abort.cpp  abstract.cpp  add.cpp  after.cpp  alarm.c  algo.c  algorithm.c  alias.c  aliasing.c  allegro5_teste.c  alpha.c  animal.cpp  (+529 more)
projects/2d/: dd.h  main.c  teste.cpp
projects/DisplayLists/: Makefile  main.c
projects/SFML/: ComplexWindow.cpp  ShortExample.cpp  SimpleWindow.cpp  Window.cpp
projects/SpinningCube/: Makefile  main.c
projects/VertexArray/: Makefile
projects/Viewport/: Makefile
projects/X11_testes/: infos_display.c  open_diplay.c  window_events.c  window_gc.c
projects/bare_metal_arm/: add.s  string_len.s  sum_arr.s
projects/bash/: _numperf.sh  _numperf2.sh  extract  finddisk.sh  gen_chroot.sh  get-geo.sh  gnomeexins.sh  gvim_start  gztobz2.sh  hexad.sh  java.sh  javainst.sh  mdisk.sh  numperf-0.1.sh  numperf-0.2.sh  ogg2mp3.sh  ogg_para_mp3.sh  pdfgz.sh  perlextrainst.sh  pingw  (+4 more)
projects/reimu/: CMakeLists.txt  event.c  event.h  game.c  game.h  graphics.c  graphics.h  handle.c  handle.h  image.c  image.h  invaders.c  invaders.h  main.c  memory.c  memory.h  reimu.c  reimu.h  settings.c  settings.h  timer.c  timer.h  util.c  util.h  window.c  window.h
(+508 files in other folders)
